--- a/Eduardo (1) (1).html
+++ b/Eduardo (1) (1).html
@@ -10,7 +10,7 @@
 <p>É um jogo de carros brasileiro</p>
 <p>Da para tirar racha com varios carros</p>
 <p>Tem muitas variedades de carros brasileiros, e da para jogar on-line</p>
-<h2>jogos com super carros brasileiros</h2>
-<bng>colocar imagem</bng>
+<h2>jogos com carros brasileiros realistas</h2>
+<png>colocar imagens</png>
 </body>
 </html>
