Update Eduardo (1) (1).html

--- a/Eduardo (1) (1).html
+++ b/Eduardo (1) (1).html
@@ -11,6 +11,6 @@
 <p>Da para tirar racha com varios carros</p>
 <p>Tem muitas variedades de carros brasileiros, e da para jogar on-line</p>
 <h2>jogos com carros brasileiros realistas</h2>
-<png>colocar imagens</png>
+<imgsrc>imagem</imgsrc>
 </body>
 </html>
