Update Eduardo (1) (1).html

--- a/Eduardo (1) (1).html
+++ b/Eduardo (1) (1).html
@@ -10,6 +10,7 @@
 <p>É um jogo de carros brasileiro</p>
 <p>Da para tirar racha com varios carros</p>
 <p>Tem muitas variedades de carros brasileiros, e da para jogar on-line</p>
-<h2>jogos com carros brasileiros realistas</h2><imgsrc>imagem</imgsrc>
+<h2>jogos com carros brasileiros realistas</h2>
+<imgsrc>imagem</imgsrc>
 </body>
 </html>
